Action Wrappers and Squid Controller; I also fixed all the other examples to match the changes to the ILC Action

--- a/book.toml
+++ b/book.toml
@@ -9,3 +9,4 @@ title = "expressway-docs"
 additional-css = ["theme/css/catppuccin.css"]
 default-theme = "latte"
 preferred-dark-theme = "macchiato"
+mathjax-support = true
