admonish, ilc update, and start of higher order

--- a/book.toml
+++ b/book.toml
@@ -6,7 +6,13 @@ src = "src"
 title = "expressway-docs"
 
 [output.html]
-additional-css = ["theme/css/catppuccin.css"]
+additional-css = ["theme/css/catppuccin.css", "theme/css/mdbook-admonish.css"]
 default-theme = "latte"
 preferred-dark-theme = "macchiato"
 mathjax-support = true
+
+[preprocessor]
+
+[preprocessor.admonish]
+command = "mdbook-admonish"
+assets_version = "3.0.2" # do not edit: managed by `mdbook-admonish install`
