--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -37,6 +37,7 @@ jobs:
           curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf -y | sh
           rustup update
           cargo install mdbook-admonish
+          cargo install mdbook
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
